k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-demo-service
spec:
  type: ClusterIP
  selector:
    app: gke-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
