k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-demo-static-ip"
spec:
  defaultBackend:
    service:
      name: gke-demo-service
      port:
        number: 80
